--- a/logging.yml
+++ b/logging.yml
@@ -1,3 +1,7 @@
+root:
+  level: WARNING
+  handlers: [console, file_handler]
+
 version: 1
 
 disable_existing_loggers: False
@@ -17,11 +21,9 @@ handlers:
   file_handler:
     class: logging.handlers.RotatingFileHandler
     level: DEBUG
+    filename: default # dynamicly changed in the script
     formatter: simple
     maxBytes: 10485760  # 10MB
     backupCount: 20
     encoding: utf8
 
-root:
-  level: WARNING
-  handlers: [console, file_handler]
