--- a/logging.yml
+++ b/logging.yml
@@ -21,9 +21,8 @@ handlers:
   file_handler:
     class: logging.handlers.RotatingFileHandler
     level: DEBUG
-    filename: default # dynamicly changed in the script
+    filename: default # dynamicaly changed in the script
     formatter: simple
     maxBytes: 10485760  # 10MB
     backupCount: 20
     encoding: utf8
-
