Lecture du fichier crf par ftps.

--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,6 @@
 # Addresse web du CNG où lire le HTML 
 url_cng: https://www.cng.fr/data/MULTIPLI/fastq/
+redcap_api_url: 'http://ib101b/html/redcap/api/'
+
+crf_host: 'ftps2.isped.u-bordeaux2.fr'
+path_crf_file: 'MULTIPLI/MULTIPLI/MULTIPLI_Sequencing_20170630.tsv'
