--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # ---- RedCap ----
-redcap_api_url: 'http://ib101b/html/redcap/api/'
-# Pour la prod: 'http://129.10.20.120/redcap/api/'
+# redcap_api_url: 'http://ib101b/html/redcap/api/'
+redcap_api_url: 'http://129.10.20.120/redcap/api/'
 
 
 # ---- CNG ----
