--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,8 @@
+
+path_to_log: '/var/log'
+
+path_to_data: 'data'
+
 # ---- RedCap ----
 # redcap_api_url: 'http://ib101b/html/redcap/api/'
 redcap_api_url: 'http://129.10.20.120/redcap/api/'
@@ -6,6 +11,22 @@ redcap_api_url: 'http://129.10.20.120/redcap/api/'
 # ---- CNG ----
 # Addresse web du CNG où lire le HTML 
 url_cng: https://www.cng.fr/data/MULTIPLI/fastq/
+
+# Liste des sets (cng) que cron_cng.py ignorera systématiquement
+ignored_set:
+  - set1
+  - set2
+  - set3
+  - set4
+  - set5
+  - set6
+  - set7
+  - set8
+
+# Liste des sets (cng) que cron_cng.py ira systématiquement lire
+mandatory_set:
+  # Do not use ~ or Null if the llist is empty
+  - ~
 
 
 # ---- CRF ----
@@ -17,7 +38,3 @@ corresp:
   SQBCRNA: rna_cng_barcode
   SQBCTUM: tumor_dna_barcode
   SQBCGER: germline_dna_cng_barcode
-
-path_to_log: '/var/log'
-
-path_to_data: 'data'
