--- a/config.yml
+++ b/config.yml
@@ -29,7 +29,9 @@ mandatory_set:
 
 # ---- CRF ----
 crf_host: 'ftps2.isped.u-bordeaux2.fr'
-path_crf_file: 'MULTIPLI/MULTIPLI_Sequencing.tsv'
+path_crf_file: 'MULTIPLI/MULTIPLI_Sequencing_20180822.tsv.tsv'
+
+local_bioanalysis_file: data/crf_extraction/Multipli_samples_bioinf.csv
 
 # Correspondance colonne fichier/champ redcap
 
