--- a/config.yml
+++ b/config.yml
@@ -29,7 +29,10 @@ mandatory_set:
 
 # ---- CRF ----
 crf_host: 'ftps2.isped.u-bordeaux2.fr'
-path_crf_file: 'MULTIPLI/MULTIPLI_Sequencing_20180822.tsv'
+# path_crf_file: 'MULTIPLI/MULTIPLI_Sequencing_20180822.tsv'
+remote_crf_file: 'MULTIPLI/MULTIPLI_Sequencing_20180822.tsv'
+#prod -> local_crf_file: 'scratch/cron_data/multipli/MULTIPLI_Sequencing_20180822.tsv'
+local_crf_file: 'data/crf_extraction/MULTIPLI_Sequencing_20180822.tsv'
 
 local_bioanalysis_file: data/crf_extraction/Multipli_samples_bioinf_test_transfert.csv
 remote_bioanalysis_file: MULTIPLI/IMPORT/Multipli_samples_bioinf_test_transfert.csv
