--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 
-path_to_log: '/var/log'
+path_to_log: '/scratch/log_cron'
 
-path_to_data: 'data'
+path_to_data: '/scratch/data_cron'
 
 # ---- RedCap ----
 # redcap_api_url: 'http://ib101b/html/redcap/api/'
