--- a/logging.yml
+++ b/logging.yml
@@ -8,7 +8,7 @@ disable_existing_loggers: False
 
 formatters:
   simple:
-    format: "%(process)d :: %(asctime)s :: %(levelname)s :: %(message)s"
+    format: "%(name)s:: %(asctime)s :: %(levelname)s :: %(message)s"
     datefmt: "%Y-%m-%d %H:%M:%S"
 
 handlers:
